--- a/app_web/templates/index.html
+++ b/app_web/templates/index.html
@@ -14,6 +14,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="/">Live Monitor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/upload">Upload Video</a></li>
                     <li class="nav-item"><a class="nav-link" href="/history">History Logs</a></li>
                 </ul>
             </div>
